--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,14 @@
 <nav class="menu">
   <div class="menu__item">
-    <a href="tvapp.html">Home/Catalogo</a>
+    <a class="nav-link" [routerLink]="['/']">Home/Catalogo</a>
   </div>
   <div class="menu__item">
-    <a href="login.html">Login/Registrazione</a>
+    <a class="nav-link" [routerLink]="['/login']">Login/Registrazione</a>
   </div>
-  <div class="menu__item"><a href="contatti.html">Contatti</a></div>
-  <div class="menu__item"><a href="ricerca.html">Ricerca</a></div>
+  <div class="menu__item">
+    <a class="nav-link" [routerLink]="['/contact']">Contatti</a>
+  </div>
+  <div class="menu__item">
+    <a class="nav-link" [routerLink]="['/search']">Ricerca</a>
+  </div>
 </nav>
