--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,6 +12,6 @@
 
     <button class="userForm__button">Entra</button>
 
-    <a href="register.html">Non hai ancora un Account ? Clicca qui </a>
+    <a href="register.html">Non hai ancora un Account ? Clicca qui ORA </a>
   </form>
 </div>
