--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<h1 class="display-1">Lista dei migliori film</h1>
+<table
+  class="table-responsive{-sm|-md|-lg|-xl} table table-hover table-striped table-hover table-bordered"
+>
+  <thead class="table-dark">
+    <tr>
+      <th>ID</th>
+      <th>Titolo</th>
+      <th>Anno</th>
+      <th>Copertina</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr *ngFor="let film of api.items">
+      <td>{{ film.id }}</td>
+      <td>{{ film.title }}</td>
+      <td>{{ film.year }}</td>
+      <td><img src="{{ film.image }}" class="rounded mx-auto d-block" /></td>
+
+      <!-- <td>
+                <a [routerLink] = "['/regione', film.regione]">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+                </a>   
+            </td>-->
+    </tr>
+  </tbody>
+</table>
