--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h1 class="display-1">Lista dei migliori film</h1>
+<h1 class="display-1">Most Popular Movies</h1>
 <table
   class="table-responsive{-sm|-md|-lg|-xl} table table-hover table-striped table-hover table-bordered"
 >
@@ -16,7 +16,11 @@
       <td>{{ film.id }}</td>
       <td>{{ film.title }}</td>
       <td>{{ film.year }}</td>
-      <td><img src="{{ film.image }}" class="rounded mx-auto d-block" /></td>
+      <td>
+        <a [routerLink]="['/film']">
+          <img src="{{ film.image }}" class="rounded mx-auto d-block" />
+        </a>
+      </td>
 
       <!-- <td>
                 <a [routerLink] = "['/regione', film.regione]">
