feat: add apiDetail and routing

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
       <td>{{ film.title }}</td>
       <td>{{ film.year }}</td>
       <td>
-        <a [routerLink]="['/film']">
+        <a [routerLink]="['/film', film.id ]">
           <img src="{{ film.image }}" class="rounded mx-auto d-block" />
         </a>
       </td>
