--- a/src/app/film-detail/film-detail.component.html
+++ b/src/app/film-detail/film-detail.component.html
@@ -1,1 +1,77 @@
-<p>film-detail works!</p>
+<div class="container">
+  <div class="card">
+    <div class="card-body" *ngIf="filmDetails">
+      <h3 class="card-title">{{ filmDetails.fullTitle }}</h3>
+      <h4>ID Film: {{ filmDetails.id }}</h4>
+      <div class="row">
+        <div class="col-lg-5 col-md-5 col-sm-6">
+          <div class="white-box text-center">
+            <img src="{{ filmDetails.image }}" class="img-responsive" />
+          </div>
+        </div>
+        <div class="col-lg-7 col-md-7 col-sm-6">
+          <h4 class="box-title mt-5">Trama</h4>
+          <p>{{ filmDetails.plotLocal }}</p>
+          <button
+            class="btn btn-dark btn-rounded mr-1"
+            data-toggle="tooltip"
+            title=""
+            data-original-title="Add to cart"
+          >
+            <i class="fa fa-shopping-cart"></i>
+          </button>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <h3 class="box-title mt-5">Informazioni sul film</h3>
+          <div class="table-responsive">
+            <table class="table table-striped table-product">
+              <tbody>
+                <tr>
+                  <td width="390">Regista</td>
+                  <td>{{ filmDetails.directors }}</td>
+                </tr>
+                <tr>
+                  <td>Cast</td>
+                  <td>
+                    <ng-container
+                      *ngFor="
+                        let actor of filmDetails.actorList;
+                        let last = last
+                      "
+                    >
+                      {{ actor.name
+                      }}<ng-container *ngIf="!last">,</ng-container>
+                    </ng-container>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Genere</td>
+                  <td>{{ filmDetails.genres }}</td>
+                </tr>
+                <tr>
+                  <td>Film correlati</td>
+                  <td>
+                    <ng-container
+                      *ngFor="
+                        let similar of filmDetails.similars;
+                        let last = last
+                      "
+                    >
+                      {{ similar.title
+                      }}<ng-container *ngIf="!last">,</ng-container>
+                    </ng-container>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div *ngIf="filmDetails">{{filmDetails.fullTitle}}
+    <h3>{{filmDetails.id}}</h3>
+
+</div> -->
