--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -14,7 +14,7 @@
   </div>
 </div>
   
-<table *ngFor="let film of filteredFilms.results"
+<!-- <table *ngFor="let film of filteredFilms.results"
 class="display-1" class="table-responsive{-sm|-md|-lg|-xl} table table-hover table-striped table-hover table-bordered"
 >
   <thead class="table-dark">
@@ -38,4 +38,28 @@ class="display-1" class="table-responsive{-sm|-md|-lg|-xl} table table-hover tab
       </td>
     </tr>
   </tbody>
-</table>
+</table> -->
+
+<div class="container2">
+  <div *ngFor="let film of filteredFilms.results" class="card">
+    <div class="card__media">
+      <a [routerLink]="['/film', film.id ]"> <img
+        src="{{ film.image }}"
+        alt="Card image"
+      /></a>
+      <span class="card__category">{{ film.id }}</span>
+    </div>
+
+    <div class="card__content">
+       <h2 class="card__title">{{ film.title }}</h2>
+     </div>
+  </div>
+
+<!-- <div *ngFor="let film of filteredFilms.results" class="card" style="width: 18rem;">
+  <img class="card-img-top" src="{{ film.image }}" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">{{ film.title }}</h5>
+    <p class="card-text">{{ film.year }}</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div> -->
