--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,13 +2,15 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  min-height: 100%;
 }
 
 .card {
   width: 300px;
+  height: 480px;
   background: #fff;
   transition: box-shadow 0.3s ease-in-out;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 15%);
   margin-bottom: 16px;
 }
 
@@ -20,10 +22,14 @@
 .card__media {
   position: relative;
   width: 300px;
+  height: 400px;
 }
 
 .card__media img {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
 }
 
 .card__date {
@@ -47,7 +53,7 @@
   line-height: 1;
 }
 
-.card__category {
+.card__id {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -67,6 +73,7 @@
 }
 
 .card__title {
+  text-align: center;
   color: initial;
   margin: 0 0 10px;
   font-size: 20px;
