--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,310 +1,19 @@
-<!-- <h1 class="display-1">Most Popular Movies</h1>
-<table
-  class="table-responsive{-sm|-md|-lg|-xl} table table-hover table-striped table-hover table-bordered"
->
-  <thead class="table-dark">
-    <tr>
-      <th>ID</th>
-      <th>Titolo</th>
-      <th>Anno</th>
-      <th>Copertina</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <tr *ngFor="let film of api.items">
-      <td>{{ film.id }}</td>
-      <td>{{ film.title }}</td>
-      <td>{{ film.year }}</td>
-      <td>
-        <a [routerLink]="['/film', film.id ]">
-          <img src="{{ film.image }}" class="rounded mx-auto d-block" />
-        </a>
-      </td>
-    </tr>
-  </tbody>
-</table> -->
-
-<!-- <div  class="container">
+  <div class="container">
   <div *ngFor="let film of api.items" class="card">
     <div class="card__media">
-      <img src="{{ film.image }}" alt="Card image" />
-      <div class="card__date">
-        <span class="date--day">{{ film.year }}</span>
-      </div>
-      <span class="card__category">Categoria</span>
-    </div>
-   
-    <div class="card__content">
-      <div class="card__header">
-        <h2 class="card__title">{{ film.title }}</h2>
-        <div class="card__subtitle">The city that never sleeps</div>
-      </div>
-      <p class="card__excerpt">New York, the largest city in the U.S., is an architectural marvel with plenty of historic monuments, magnificent buildings and countless dazzling skyscrapers.</p>
-   
-      <div class="card__meta" role="contentinfo">
-        <span class="card__post-date">6 min ago</span>
-        <span class="card__comments">39 comments</span>
-      </div>
-    </div>
-  </div> -->
-
-<div class="container">
-  <div *ngFor="let film of api.items" class="card">
-    <div class="card__media">
-      <a [routerLink]="['/film', film.id ]"> <img
+      <a [routerLink]="['/film', film.id ]"> <img 
         src="{{ film.image }}"
+        loading="lazy"
         alt="Card image"
       /></a>
       <div class="card__date">
         <span class="date__day">{{ film.year }}</span>
       </div>
-      <span class="card__category">{{ film.id }}</span>
+      <span class="card__id">{{ film.id }}</span>
     </div>
 
     <div class="card__content">
        <h2 class="card__title">{{ film.title }}</h2>
      </div>
-  </div>
-  
-  <!-- <div class="card">
-    <div class="card__media">
-      <img
-        src="https://www.ilcineocchio.it/cine/wp-content/uploads/2022/05/the-umbrella-academy-stagione-3-2022-poster.jpg"
-        alt="Card image"
-      />
-      <div class="card__date">
-        <span class="date--day">2022</span>
-      </div>
-      <span class="card__category">ID:7563858848</span>
-    </div>
-
-    <div class="card__content">
-      <div class="card__header">
-        <h2 class="card__title">The Umbrella Academy</h2>
-      </div>
-    </div>
-  </div>
-  
-  <div class="card">
-    <div class="card__media">
-      <img
-        src="https://www.ilcineocchio.it/cine/wp-content/uploads/2022/05/the-umbrella-academy-stagione-3-2022-poster.jpg"
-        alt="Card image"
-      />
-      <div class="card__date">
-        <span class="date--day">2022</span>
-      </div>
-      <span class="card__category">ID:7563858848</span>
-    </div>
-
-    <div class="card__content">
-      <div class="card__header">
-        <h2 class="card__title">The Umbrella Academy</h2>
-      </div>
-    </div>
-  </div>
- 
-  <div class="card">
-    <div class="card__media">
-      <img
-        src="https://www.ilcineocchio.it/cine/wp-content/uploads/2022/05/the-umbrella-academy-stagione-3-2022-poster.jpg"
-        alt="Card image"
-      />
-      <div class="card__date">
-        <span class="date--day">2022</span>
-      </div>
-      <span class="card__category">ID:7563858848</span>
-    </div>
-
-    <div class="card__content">
-      <div class="card__header">
-        <h2 class="card__title">The Umbrella Academy</h2>
-      </div>
-    </div>
-  </div>
-  
-  <div class="card">
-    <div class="card__media">
-      <img
-        src="https://www.ilcineocchio.it/cine/wp-content/uploads/2022/05/the-umbrella-academy-stagione-3-2022-poster.jpg"
-        alt="Card image"
-      />
-      <div class="card__date">
-        <span class="date--day">2022</span>
-      </div>
-      <span class="card__category">ID:7563858848</span>
-    </div>
-
-    <div class="card__content">
-      <div class="card__header">
-        <h2 class="card__title">The Umbrella Academy</h2>
-      </div>
-    </div>
-  </div>
-  
-  <div class="card">
-    <div class="card__media">
-      <img
-        src="https://www.ilcineocchio.it/cine/wp-content/uploads/2022/05/the-umbrella-academy-stagione-3-2022-poster.jpg"
-        alt="Card image"
-      />
-      <div class="card__date">
-        <span class="date--day">2022</span>
-      </div>
-      <span class="card__category">ID:7563858848</span>
-    </div>
-
-    <div class="card__content">
-      <div class="card__header">
-        <h2 class="card__title">The Umbrella Academy</h2>
-      </div>
-    </div>
-  </div> -->
-  
-  <!-- <div class="card">
-    <div class="card__media">
-      <img
-        src="https://www.ilcineocchio.it/cine/wp-content/uploads/2022/05/the-umbrella-academy-stagione-3-2022-poster.jpg"
-        alt="Card image"
-      />
-      <div class="card__date">
-        <span class="date--day">2022</span>
-      </div>
-      <span class="card__category">Categoria</span>
-    </div>
-
-    <div class="card__content">
-      <div class="card__header">
-        <h2 class="card__title">Titolo</h2>
-        <div class="card__subtitle">The city that never sleeps</div>
-      </div>
-      <p class="card__excerpt">
-        New York, the largest city in the U.S., is an architectural marvel with
-        plenty of historic monuments, magnificent buildings and countless
-        dazzling skyscrapers.
-      </p>
-
-      <div class="card__meta" role="contentinfo">
-        <span class="card__post-date">6 min ago</span>
-        <span class="card__comments">39 comments</span>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card__media">
-      <img
-        src="https://www.ilcineocchio.it/cine/wp-content/uploads/2022/05/the-umbrella-academy-stagione-3-2022-poster.jpg"
-        alt="Card image"
-      />
-      <div class="card__date">
-        <span class="date--day">2022</span>
-      </div>
-      <span class="card__category">Categoria</span>
-    </div>
-
-    <div class="card__content">
-      <div class="card__header">
-        <h2 class="card__title">Titolo</h2>
-        <div class="card__subtitle">The city that never sleeps</div>
-      </div>
-      <p class="card__excerpt">
-        New York, the largest city in the U.S., is an architectural marvel with
-        plenty of historic monuments, magnificent buildings and countless
-        dazzling skyscrapers.
-      </p>
-
-      <div class="card__meta" role="contentinfo">
-        <span class="card__post-date">6 min ago</span>
-        <span class="card__comments">39 comments</span>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card__media">
-      <img
-        src="https://www.ilcineocchio.it/cine/wp-content/uploads/2022/05/the-umbrella-academy-stagione-3-2022-poster.jpg"
-        alt="Card image"
-      />
-      <div class="card__date">
-        <span class="date--day">2022</span>
-      </div>
-      <span class="card__category">Categoria</span>
-    </div>
-
-    <div class="card__content">
-      <div class="card__header">
-        <h2 class="card__title">Titolo</h2>
-        <div class="card__subtitle">The city that never sleeps</div>
-      </div>
-      <p class="card__excerpt">
-        New York, the largest city in the U.S., is an architectural marvel with
-        plenty of historic monuments, magnificent buildings and countless
-        dazzling skyscrapers.
-      </p>
-
-      <div class="card__meta" role="contentinfo">
-        <span class="card__post-date">6 min ago</span>
-        <span class="card__comments">39 comments</span>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card__media">
-      <img
-        src="https://www.ilcineocchio.it/cine/wp-content/uploads/2022/05/the-umbrella-academy-stagione-3-2022-poster.jpg"
-        alt="Card image"
-      />
-      <div class="card__date">
-        <span class="date--day">2022</span>
-      </div>
-      <span class="card__category">Categoria</span>
-    </div>
-
-    <div class="card__content">
-      <div class="card__header">
-        <h2 class="card__title">Titolo</h2>
-        <div class="card__subtitle">The city that never sleeps</div>
-      </div>
-      <p class="card__excerpt">
-        New York, the largest city in the U.S., is an architectural marvel with
-        plenty of historic monuments, magnificent buildings and countless
-        dazzling skyscrapers.
-      </p>
-
-      <div class="card__meta" role="contentinfo">
-        <span class="card__post-date">6 min ago</span>
-        <span class="card__comments">39 comments</span>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card__media">
-      <img
-        src="https://www.ilcineocchio.it/cine/wp-content/uploads/2022/05/the-umbrella-academy-stagione-3-2022-poster.jpg"
-        alt="Card image"
-      />
-      <div class="card__date">
-        <span class="date--day">2022</span>
-      </div>
-      <span class="card__category">Categoria</span>
-    </div>
-
-    <div class="card__content">
-      <div class="card__header">
-        <h2 class="card__title">Titolo</h2>
-        <div class="card__subtitle">The city that never sleeps</div>
-      </div>
-      <p class="card__excerpt">
-        New York, the largest city in the U.S., is an architectural marvel with
-        plenty of historic monuments, magnificent buildings and countless
-        dazzling skyscrapers.
-      </p>
-
-      <div class="card__meta" role="contentinfo">
-        <span class="card__post-date">6 min ago</span>
-        <span class="card__comments">39 comments</span>
-      </div>
-    </div>
-  </div> -->
-</div>  <!-- fine div container-->
+  </div> 
+</div>
