--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,3 +1,30 @@
+.search {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 16px;
+}
+
+.search > * {
+  padding: 20px;
+}
+
+.search input {
+  width: 90%;
+  border: 1px solid #c1c1c1;
+  border-right: none;
+  outline: none;
+  font-size: 16px;
+}
+
+.search button {
+  padding: 20px;
+  border: 1px solid #c1c1c1;
+  border-left: none;
+  cursor: pointer;
+}
+
+/* Result */
+
 .container2 {
   display: flex;
   flex-wrap: wrap;
@@ -6,9 +33,10 @@
 
 .card {
   width: 300px;
+  height: 480px;
   background: #fff;
   transition: box-shadow 0.3s ease-in-out;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 15%);
   margin-bottom: 16px;
 }
 
@@ -20,10 +48,14 @@
 .card__media {
   position: relative;
   width: 300px;
+  height: 400px;
 }
 
 .card__media img {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
 }
 
 .card__date {
@@ -67,6 +99,7 @@
 }
 
 .card__title {
+  text-align: center;
   color: initial;
   margin: 0 0 10px;
   font-size: 20px;
