--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,65 +1,28 @@
-<div id="container" class="container">
- <div class="d-flex">
-      <div class="flex-fill">
-        <input #yourInput
-          class="form-control"
-          placeholder="Ricerca il film"
-          type="text"
-          (keyup.enter)="onInputClick(yourInput.value)"
-        />
-      </div>
-      <div class="ps-3">
-        <button (click)="onInputClick(yourInput.value)" id="button_ricerca" class="btn btn-primary">Cerca</button>
-      </div>
-  </div>
+<div class="search">
+  <input
+    #yourInput
+    placeholder="Ricerca il film"
+    type="text"
+    (keyup.enter)="onInputSearch(yourInput.value)"
+  />
+  <button (click)="onInputSearch(yourInput.value)" id="button_ricerca" class="">
+    <i class="fa fa-search"></i>
+  </button>
 </div>
-  
-<!-- <table *ngFor="let film of filteredFilms.results"
-class="display-1" class="table-responsive{-sm|-md|-lg|-xl} table table-hover table-striped table-hover table-bordered"
->
-  <thead class="table-dark">
-    <tr>
-      <th>ID</th>
-      <th>Titolo</th>
-      <th>Anno</th>
-      <th>Copertina</th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <tr >
-      <td>{{ film.id }}</td>
-      <td>{{ film.title }}</td>
-      <td>{{ film.year }}</td>
-      <td>
-        <a [routerLink]="['/film', film.id ]">
-          <img src="{{ film.image }}" class="rounded mx-auto d-block" />
-        </a>
-      </td>
-    </tr>
-  </tbody>
-</table> -->
+<!-- Result -->
 
 <div class="container2">
   <div *ngFor="let film of filteredFilms.results" class="card">
     <div class="card__media">
-      <a [routerLink]="['/film', film.id ]"> <img
-        src="{{ film.image }}"
-        alt="Card image"
+      <a [routerLink]="['/film', film.id]">
+        <img src="{{ film.image }}" alt="Card image"
       /></a>
       <span class="card__category">{{ film.id }}</span>
     </div>
 
     <div class="card__content">
-       <h2 class="card__title">{{ film.title }}</h2>
-     </div>
+      <h2 class="card__title">{{ film.title }}</h2>
+    </div>
   </div>
-
-<!-- <div *ngFor="let film of filteredFilms.results" class="card" style="width: 18rem;">
-  <img class="card-img-top" src="{{ film.image }}" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">{{ film.title }}</h5>
-    <p class="card-text">{{ film.year }}</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div> -->
+</div>
