feat:complete detail style and fix container style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="page">
   <!--
     Qui va lo schema a blocchi "funzionale"
   -->
   <app-header></app-header>
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
-  <app-footer></app-footer>
+  <app-footer class="page__footer"></app-footer>
 </div>
