--- a/src/app/film-detail/film-detail.component.html
+++ b/src/app/film-detail/film-detail.component.html
@@ -1,72 +1,120 @@
-<div class="container">
-  <div class="card">
-    <div class="card-body" *ngIf="filmDetails">
-      <h3 class="card-title">{{ filmDetails.fullTitle }}</h3>
+<div class="detail" *ngIf="filmDetails">
+  <div class="detail__card">
+    <div class="detail__photo">
+      <img
+      src="{{ filmDetails.image }}"
+        alt="filmPoster"
+      />
+    </div>
+
+    <div class="detail__content">
+      <h3 class="detail__title">{{ filmDetails.fullTitle }}</h3>
+      <h4 class="detail__id">{{ filmDetails.id }}</h4>
+      <p class="detail__plot">
+        {{ filmDetails.plotLocal }}
+      </p>
+
+      <button class="detail__shopButton">
+        <i class="fa fa-shopping-cart"></i>
+        Acquista ora
+      </button>
+    </div>
+  </div>
+  <div class="detail__video" id="frame" *ngIf="filmTrailer">
+    <iframe
+      [src]="transform(idUrl)"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+  </div>
+
+  <div class="detail__info">
+    <h3>Informazioni sul film</h3>
+    <dl class="detail__list">
+      <dt>Regista</dt>
+      <dd>{{ filmDetails.directors }}</dd>
+      <dt>Genere</dt>
+      <dd>{{ filmDetails.genres }}</dd>
+      <dt>Cast</dt>
+      <dd><ng-container
+        *ngFor="let actor of filmDetails.actorList; let last = last"
+      >
+        {{ actor.name }}<ng-container *ngIf="!last">,</ng-container>
+      </ng-container></dd>
+      <dt>Film correlati</dt>
+      <dd> <ng-container
+        *ngFor="let similar of filmDetails.similars; let last = last"
+      >
+        {{ similar.title }}<ng-container *ngIf="!last">,</ng-container>
+      </ng-container></dd>
+    </dl>
+  </div>
+</div>
+
+<!-- <div class="container">
+  <div class="detail" *ngIf="filmDetails">
+    <div class="detail__title">
+      <h3>{{ filmDetails.fullTitle }}</h3>
       <h4>ID Film: {{ filmDetails.id }}</h4>
-      <div class="row">
-        <div class="col-lg-5 col-md-5 col-sm-6">
-          <div class="white-box text-center">
-            <img src="{{ filmDetails.image }}" class="img-responsive" />
-          </div>
-        </div>
-        <div class="col-lg-7 col-md-7 col-sm-6">
-          <h4 class="box-title mt-5">Trama</h4>
-          <p>{{ filmDetails.plotLocal }}</p>
-          <button
-            class="btn btn-dark btn-rounded mr-1"
-            data-toggle="tooltip"
-            title=""
-            data-original-title="Add to cart"
-          >
-            <i class="fa fa-shopping-cart"></i>
-          </button>
-        </div>
-        <div class="col-lg-12 col-md-12 col-sm-12">
-          <h3 class="box-title mt-5">Informazioni sul film</h3>
-          <div class="table-responsive">
-            <table class="table table-striped table-product">
-              <tbody>
-                <tr>
-                  <td width="390">Regista</td>
-                  <td>{{ filmDetails.directors }}</td>
-                </tr>
-                <tr>
-                  <td>Cast</td>
-                  <td>
-                    <ng-container
-                      *ngFor="
-                        let actor of filmDetails.actorList;
-                        let last = last
-                      "
-                    >
-                      {{ actor.name
-                      }}<ng-container *ngIf="!last">,</ng-container>
-                    </ng-container>
-                  </td>
-                </tr>
-                <tr>
-                  <td>Genere</td>
-                  <td>{{ filmDetails.genres }}</td>
-                </tr>
-                <tr>
-                  <td>Film correlati</td>
-                  <td>
-                    <ng-container
-                      *ngFor="
-                        let similar of filmDetails.similars;
-                        let last = last
-                      "
-                    >
-                      {{ similar.title
-                      }}<ng-container *ngIf="!last">,</ng-container>
-                    </ng-container>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+    </div>
+    <div class="detail__detail">
+      <div class="detail__photo">
+        <img src="{{ filmDetails.image }}" alt="filmPoster" />
+      </div>
+      <div class="detail__plot">
+        <h4>Trama</h4>
+        <p>
+          {{ filmDetails.plotLocal }}
+        </p>
+
+        <button
+          _ngcontent-wee-c22=""
+          data-toggle="tooltip"
+          title=""
+          data-original-title="Add to cart"
+          class="btn btn-dark btn-rounded mr-1"
+        >
+          <i _ngcontent-wee-c22="" class="fa fa-shopping-cart"></i>
+        </button>
+        <div id="frame" *ngIf="filmTrailer">
+          <iframe
+            [src]="transform(idUrl)"
+            width="800"
+            height="500"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
       </div>
     </div>
+    <div class="detail__info">
+      <h3>Informazioni sul film</h3>
+      <h4>Regista</h4>
+      <p>
+        {{ filmDetails.directors }}
+      </p>
+      <h4>Cast</h4>
+      <p>
+        <ng-container
+          *ngFor="let actor of filmDetails.actorList; let last = last"
+        >
+          {{ actor.name }}<ng-container *ngIf="!last">,</ng-container>
+        </ng-container>
+      </p>
+      <h4>Genere</h4>
+      <p>
+        {{ filmDetails.genres }}
+      </p>
+      <h4>Film correlati</h4>
+      <p>
+        <ng-container
+          *ngFor="let similar of filmDetails.similars; let last = last"
+        >
+          {{ similar.title }}<ng-container *ngIf="!last">,</ng-container>
+        </ng-container>
+      </p>
+    </div>
   </div>
-</div>
+</div> -->
