--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,4 @@
-.container {
+.resultsList {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -74,7 +74,5 @@
 
 .card__title {
   text-align: center;
-  color: initial;
-  margin: 0 0 10px;
   font-size: 20px;
 }
