--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-  <div class="container">
+  <div class="resultsList">
   <div *ngFor="let film of api.items" class="card">
     <div class="card__media">
       <a [routerLink]="['/film', film.id ]"> <img 
