--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="resultsList">
- <app-card *ngFor="let film of api.items" [props]="film"></app-card>
+ <app-card [ngClass]="'resultsList__item'" *ngFor="let film of api.items" [props]="film"></app-card>
 </div>
  
