--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,27 +1,33 @@
 .card {
-  width: 300px;
-  height: 480px;
+  width: 100%;
+  height: 100%;
   background: #fff;
   transition: box-shadow 0.3s ease-in-out;
   box-shadow: 0 1px 2px 0 rgb(0 0 0 / 15%);
-  margin-bottom: 16px;
 }
 
 .card:hover {
   box-shadow: 0 1px 35px 0 rgba(0, 0, 0, 0.3);
 }
 
+/* 
+  uso aspect-ratio per gestire immagini di diverse dimensioni restituite dall'api
+*/
 .card__media {
   position: relative;
-  width: 300px;
-  height: 400px;
+  padding-bottom: 137.5%; /* 11:8 */
+  height: 0;
+  width: 100%;
+  aspect-ratio: 8/11; /* non supportata da ie11 */
 }
 
 .card__media img {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: top;
 }
 
 .card__date {
