feat: change layout page and detail

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,7 +3,7 @@ footer {
     justify-content: center;
     margin-top: 16px;
     padding: 16px;
-    background-color: #c1c1c1;
+    background-color: #777a928c;
   }
   
   .social {
