--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,11 @@
 <footer>
-  <a href="#" class="social"
+  <a target="_blank" href="https://www.facebook.com/" class="social"
     ><img src="../assets/images/facebook.png" alt="facebook"
   /></a>
-  <a href="#" class="social"
+  <a target="_blank" href="https://www.instagram.com/" class="social"
     ><img src="../assets/images/instagram.png" alt="instagram"
   /></a>
-  <a href="#" class="social"
+  <a target="_blank" href="https://twitter.com/" class="social"
     ><img src="../assets/images/twitter.png" alt="twitter"
   /></a>
 </footer>
