--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,11 +2,15 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  max-width: 1200px;
-  padding: 16px 16px 0;
-  margin: 0 auto;
 }
 
 .page__footer {
   margin-top: auto;
+}
+
+.container {
+  max-width: 1280px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 16px;
 }
