--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
   -->
   <app-header></app-header>
   <app-navbar></app-navbar>
-  <router-outlet></router-outlet>
+  <div class="container"><router-outlet></router-outlet></div>
   <app-footer class="page__footer"></app-footer>
 </div>
