--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,22 @@
 <nav class="menu">
-  <div class="menu__item">
-    <a class="nav-link" [routerLink]="['/']">Home/Catalogo</a>
-  </div>
-  <div class="menu__item">
-    <a class="nav-link" [routerLink]="['/login']">Login/Registrazione</a>
-  </div>
-  <div class="menu__item">
-    <a class="nav-link" [routerLink]="['/contact']">Contatti</a>
-  </div>
-  <div class="menu__item">
-    <a class="nav-link" [routerLink]="['/search']">Ricerca</a>
+  <div class="menu__container">
+    <div class="menu__item">
+      <a class="nav-link" [routerLink]="['/']"
+        ><i class="fa-solid fa-house"></i> Home/Catalogo</a
+      >
+    </div>
+    <div class="menu__item">
+      <a class="nav-link" [routerLink]="['/login']"
+        ><i class="fa-solid fa-arrow-right-to-bracket"></i> Login/Registrazione</a
+      >
+    </div>
+    <div class="menu__item">
+      <a class="nav-link" [routerLink]="['/contact']"
+        ><i class="fa-solid fa-at"></i> Contatti</a
+      >
+    </div>
+    <div class="menu__item">
+      <a class="nav-link" [routerLink]="['/search']"><i class="fa-solid fa-magnifying-glass"></i> Ricerca</a>
+    </div>
   </div>
 </nav>
