feat: add html,css register page

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,11 @@
 <div class="userFormContainer" id="contatti">
   <h2>Richiedi informazioni</h2>
-  <form class="userForm" action="" name="modulo" method="post">
+  <form
+    class="userForm"
+    action="javascript:void(0)"
+    name="modulo"
+    method="post"
+  >
     <label for="nome">Nome</label>
     <input class="userForm__textField" type="text" id="nome" />
     <span class="userForm__error">Nome obbligatorio</span>
