--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="userFormContainer" id="login">
   <h2>Entra nell'area riservata</h2>
-  <form class="userForm" action="paginaLogin.jsp" method="post">
+  <form class="userForm" action="javascript:void(0)" method="post">
     <label for="email">Email</label>
     <input class="userForm__textField" type="text" id="email" />
     <span class="userForm__error">Email obbligatoria</span>
@@ -12,6 +12,8 @@
 
     <button class="userForm__button">Entra</button>
 
-    <a href="register.html">Non hai ancora un Account ? Clicca qui ORA </a>
+    <a [routerLink]="['/register']"
+      >Non hai ancora un Account ? Clicca qui ORA
+    </a>
   </form>
 </div>
