--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,9 +1,17 @@
-<ng-container *ngIf="display$ | async as display">
-  <section [class.open]="display === 'open'" (click)="close()">
-    <div (click)="$event.stopPropagation()">
-      <button class="close" type="button" (click)="close()">X</button>
-
-      <app-login></app-login>
+<div class="modal">
+    <div class="modal__body">
+      <button class="modal__close" type="button" (click)="close()">X</button>
+        <ng-content></ng-content>
     </div>
-  </section>
-</ng-container>
+</div>
+<div class="modal__background"></div>
+
+<!-- <ng-container *ngIf="display$ | async as display">
+  <div class="modal" [class.open]="display === 'open'" (click)="close()">
+    <div class="modal-container" (click)="$event.stopPropagation()">
+      <button class="close" type="button" (click)="close()">X</button>
+      <div><ng-content></ng-content></div>
+      
+    </div>
+  </div>
+</ng-container> -->
