--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,11 +16,7 @@
       >
     </div>
     <div class="menu__item">
-      <a class="nav-link" (click)="open()"
-        ><i class="fa-solid fa-arrow-right-to-bracket"></i>
-        Login/Registrazione</a
-      >
+      <app-dashboard></app-dashboard>
     </div>
   </div>
-  <app-modal></app-modal>
 </nav>
