--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -1,7 +1,57 @@
-section {
+app-modal {
+  display: none;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  overflow: auto;
+  display: flex;
+}
+
+.modal__body {
+  padding: 20px;
+  background: #fff;
+  margin: auto;
+  max-width: 400px;
+  border-radius: 8px;
+}
+.modal__background {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  opacity: 0.75;
+  z-index: 900;
+}
+body.modal__open {
+  overflow: hidden;
+}
+
+.modal__close {
+  display: flex;
+  margin-left: auto;
+  background: none;
+  color: inherit;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  outline: none;
+  top: 0;
+  left: 0;
+  margin-bottom: 16px;
+  font-size: 24px;
+}
+
+/* .modal {
   visibility: hidden;
   opacity: 0;
-  display: block;
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -11,11 +61,12 @@ section {
   transition: opacity ease-in;
   max-height: 100%;
 }
-section.open {
+.modal.open {
   visibility: inherit;
+  display: block;
   opacity: 1;
 }
-section div {
+.modal-body {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -28,7 +79,8 @@ section div {
   box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.1);
   z-index: 1;
 }
-section button.close {
+
+.close {
   background: none;
   color: inherit;
   border: none;
@@ -39,4 +91,4 @@ section button.close {
   top: 0;
   left: 0;
   padding: 16px;
-}
+} */
